# semantic-edit-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPROVEMENTS.md  LICENSE-APACHE  LICENSE-MIT  PROJECT_SUMMARY.md  README.md  claude-desktop-config.json  test.json  test_staging.rs
.github/workflows/: ci.yaml  release.yml
docs/: FUTURE_ARCHITECTURE.md  IMPROVEMENTS.md  MULTI_LANGUAGE_PLAN.md  adding-languages.md  ai-development-practices.md  ast_explorer.md  enhanced-error-handling-roadmap.md  enhanced_snapshot_testing_plan.md  explainer.md  node-selection-redesign.md  test-issues-found.md  tmp.md
examples/: test_context_validation.rs
queries/json/: node-types.json  operations.scm
queries/markdown/: node-types.json  operations.scm
queries/python/: validation.scm
queries/rust/: validation.scm
schemas/: commit_staged.json  explore_ast.json  get_node_info.json  insert_after_enum.json  insert_after_enum.json.backup  insert_after_function.json  insert_after_function.json.backup  insert_after_impl.json  insert_after_impl.json.backup  insert_after_node.json  insert_after_struct.json  insert_after_struct.json.backup  insert_before_node.json  insert_in_module.json  insert_in_module.json.backup  open_file.json  open_files.json  read_documentation.json  remove_node.json  replace_node.json  retarget_staged.json  stage_operation.json  validate_edit_context.json  validate_syntax.json  wrap_node.json
src/: ast_explorer.rs  ast_explorer.rs.removed  editor.rs  handlers.rs  indentation.rs  lib.rs  main.rs  parser.rs  searcher.rs  selector.rs  server.rs  server_impl.rs  session.rs  specialized_tools.rs  specialized_tools.rs.backup  staging.rs  state.rs  tools.rs  traits.rs  types.rs
src/editor/: edit.rs  edit_iterator.rs  edit_position.rs
src/editors/: mod.rs  rust.rs
src/languages/: common.rs  ecma_editor.rs  javascript.rs  json.rs  jsx.rs  markdown.rs  mod.rs  plain.rs  python.rs  query_parser.rs  rust.rs  semantic_grouping.rs  semantic_grouping_tests.rs  toml.rs  traits.rs  tsx.rs  typescript.rs  utils.rs
src/languages/json/: editor.rs  mod.rs  mod_impl.rs
src/languages/markdown/: editor.rs  mod.rs  mod_impl.rs
src/operations/: edit_operation.rs  mod.rs  selector.rs  validation.rs
src/parsers/: mod.rs  rust.rs
src/tests/: mod.rs  semantic_validation.rs  snapshot_runner.rs
src/tools/: commit_staged.rs  open_file.rs  open_files.rs  persist_edit.rs  preview_edit.rs  retarget_edit.rs  retarget_staged.rs  set_context.rs  set_working_directory.rs  stage_operation.rs
src/validation/: context_validator.rs  mod.rs
tests/: mod.rs  semantic_validation.rs  snapshot_runner.rs
tests/semantic_validation_corpus/: docs_automation.rs  example.py
tests/snapshots/basic_operations/explore_ast/: args.json  response.txt
tests/snapshots/basic_operations/explore_ast.removed/: input.rs
tests/snapshots/basic_operations/get_documentation/: args.json  input.json  response.txt
tests/snapshots/basic_operations/insert_after/: args.json  output.rs  response.txt
tests/snapshots/basic_operations/insert_after_duplication/: args.json  input.rs  output.rs  response.txt
tests/snapshots/basic_operations/insert_after_function/: args.json  expected_output.txt  response.txt
tests/snapshots/basic_operations/insert_after_node/: args.json  input.rs  output.rs  response.txt
tests/snapshots/basic_operations/insert_after_struct/: args.json  expected_output.txt  input.rs  output.rs  response.txt
tests/snapshots/basic_operations/insert_before/: args.json  output.rs  response.txt
tests/snapshots/basic_operations/insert_before_duplication/: args.json  input.rs  output.rs  response.txt
tests/snapshots/basic_operations/insert_before_node/: args.json  response.txt
tests/snapshots/basic_operations/replace_ast/: args.json  input.rs  response.txt
tests/snapshots/basic_operations/replace_exact/: args.json  input.rs  output.rs  response.txt
tests/snapshots/basic_operations/replace_function/: args.json  expected_output.txt  response.txt
tests/snapshots/basic_operations/replace_range/: args.json  output.rs  response.txt
tests/snapshots/basic_operations/wrap_node/: args.json  input.rs  (+2 more)
(+210 files in other folders)
