[package]
name = "semantic-edit-mcp"
version = "0.1.2"
authors = ["Jacob Rothstein <hi@jbr.me>", "Anthropic Claude Sonnet 4"]
edition = "2021"
description = "MCP server for semantic code editing with tree-sitter"
readme = "README.md"
repository = "https://github.com/jbr/semantic-edit-mcp"
documentation = "https://docs.rs/semantic-edit-mcp"
license = "MIT OR Apache-2.0"
keywords = ["mcp", "tree-sitter", "semantic-editing", "code-editing"]
categories = ["development-tools", "text-processing"]

[dependencies]
# MCP server basics
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"

# Tree-sitter for AST parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"

# File system operations
walkdir = "2.5"

# Text processing
ropey = "1.6"  # Efficient text editing with proper UTF-8 handling
tree-sitter-json = "0.24.8"

# Additional tree-sitter grammars to add
# tree-sitter-typescript = "0.23"
# tree-sitter-python = "0.23"
# tree-sitter-javascript = "0.23"
# tree-sitter-query = "0.1.0"
# tree-sitter-markdown = "0.7.1"
# tree-sitter-json = "0.24"
# tree-sitter-toml = "0.20"
# tree-sitter-elisp = "1.5.0"
